--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>JS-SNACK-ES6</title>
-    <script src="./script/script.js"></script>
+    <script defer src="./script/script.js"></script>
 </head>
 <body>
     
